--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/guru-icon.png" />
+    <link rel="apple-touch-icon" href="/guru-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web</title>
+    <meta name="description" content="Monitor Irish river water levels, flow rates, and temperature. Real-time data for River Lee, Blackwater, Suir, Bandon, and Owenboy with weather forecasts and sun times." />
+    <meta name="theme-color" content="#3B82F6" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>River Guru - Irish Rivers Monitoring</title>
   </head>
   <body>
     <div id="app"></div>
