--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,15 @@
     <meta name="theme-color" content="#3B82F6" />
     <link rel="manifest" href="/manifest.json" />
     <title>River Guru - Irish Rivers Monitoring</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EBGR3HBRG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-6EBGR3HBRG');
+    </script>
   </head>
   <body>
     <div id="app"></div>
